[AV2-611] fixed text alignment issue.

--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -99,6 +99,9 @@ ion-item.no-bg {
         height: 100%;
         margin: 0;
         margin-left: 15px;
+        ion-label {
+          text-align: center !important;
+        }
       }
     }
   }
